--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         target: /run/secrets/downloader_bot_old_school_api_hash
 
     volumes:
-        - docker_old_school_volume:/mnt/oldschool/import
+        - "/mnt/oldschool/import:/media_from_dialogs"
 
     build:
       context: ./
@@ -27,6 +27,3 @@ secrets:
     external: true
   downloader_bot_old_school_api_hash:
       external: true
-    
-volumes:
-  docker_old_school_volume:
